<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Pacient1">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"
        />
    <item
        android:icon="@drawable/vithov"
        android:id="@+id/Vithov"
        android:orderInCategory="50"
        android:title="@string/Vithov"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_settings2"
        android:icon="@drawable/dobavlenie"
        android:orderInCategory="100"
        android:title="@string/action_settings2"
        app:showAsAction="always" />

</menu>
