<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:gravity="center"
        android:textColor="#000000" />
    <Button android:id="@+id/speech_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speech" />
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/word_intro"
        android:textStyle="italic" />
    <ListView android:id="@+id/word_list"
        android:layout_width="fill_parent"
        android:layout_height="307dp"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.38" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Перейти К Постановке Диагноза"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal" />
</LinearLayout>